apps/base/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: jellyfin
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Jellyfin
    gethomepage.dev/description: Media server
    gethomepage.dev/group: Medien
    gethomepage.dev/icon: jellyfin.png
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.org/ssl-redirect: "false"
    nginx.org/redirect-to-https: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jellyfin.f4mily.net
      secretName: wildcard-f4mily-net-tls
  rules:
    - host: jellyfin.f4mily.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
